hphp/hack/test/typecheck/loader_example.php.like_types.exp
File "loader_example.php", line 43, characters 11-12:
Invalid argument (Typing[4110])
File "loader_example.php", line 12, characters 23-38:
Expected ~<expr#1> because it is an unenforceable type
File "loader_example.php", line 31, characters 49-55:
But got <expr#2>
File "loader_example.php", line 43, characters 11-12:
  where '<expr#2>' is a reference to this expression
